--- a/css/style.css
+++ b/css/style.css
@@ -98,3 +98,24 @@ body > svg {
   top: -80px;
   left: -160px;
 }
+
+.codeWall {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: black;
+  border-radius: 15px;
+  opacity: 0.9;
+  color: white;
+  z-index: 100;
+}
+
+.hide {
+  display: none;
+}
+
+#code {
+  display: none;
+}
