--- a/css/present.css
+++ b/css/present.css
@@ -1,4 +1,5 @@
 body {
+  background: #fff;
   position: relative;
   width: 1280px;
   height: 800px;
@@ -8,7 +9,6 @@ body {
 
 iframe {
   border: none;
-  /* border: solid; */
   position: absolute;
   width: 1280px;
   height: 800px;
@@ -22,17 +22,22 @@ iframe {
 #previous {
   opacity: 0;
   -moz-transform: translateX(-1300px);
-  -webkit-transform: translateX(-1300px);
+  -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, -1300, 0, 0, 1);
+  /* -webkit-transform: translateX(-1300px); */
 }
 
 #current {
   opacity: 1;
   -moz-transform: translateX(0);
-  -webkit-transform: translateX(0);
+  -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
+
+  /* -webkit-transform: translateX(0); */
 }
 
 #next {
   opacity: 0;
   -moz-transform: translateX(1300px);
-  -webkit-transform: translateX(1300px);
+  /* -webkit-transform: translateX(1300px); */
+  -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 1300, 0, 0, 1);
+  
 }
